--- a/package.json
+++ b/package.json
@@ -11,16 +11,20 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "emoji-mart": "^5.6.0",
+    "emoji-picker-react": "^4.12.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.523.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
+    "@types/emoji-mart": "^3.0.14",
     "@types/leaflet": "^1.9.19",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
