--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.2",
