--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@solana/wallet-standard-features": "^1.3.0",
     "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.0",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.12.2",
     "leaflet": "^1.9.4",
@@ -22,7 +24,8 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.2",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
