--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,7 +23,11 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    // EKLENENLER
+    "outDir": "./build",
+    "rootDir": "./src"
   },
   "include": ["src"]
 }
