feat: İlanlarım modülü için yeni kart tasarımı ve layout iyileştirmeleri
- Yeni birleşik ListingCard bileşeni oluşturuldu
- Compact, horizontal ve vertical layout seçenekleri eklendi
- Yük İlanları ve Nakliye Talepleri için compact grid layout
- Nakliye Hizmetleri için vertical kart layout
- Tüm kartlarda açıklayıcı etiketler ve ikon sistemi
- TypeScript dönüşümü tamamlandı (.js -> .tsx)
- Gereksiz JavaScript dosyaları temizlendi

Özellikler:
- 3 sütunlu responsive grid layout
- Tip-spesifik ikonlar ve renkler
- Nakliye Taleplerinde araç tipi gösterimi
- Nakliye Hizmetlerinde gemi adı ve IMO numarası
- Kompakt tasarım ile daha fazla kart görünümü
- Tutarlı etiketleme sistemi

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,10 +11,11 @@
     "skipLibCheck": true,
 
     /* Bundler mode */
-    "moduleResolution": "node",
-    "verbatimModuleSyntax": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "isolatedModules": true,
     "moduleDetection": "force",
-    "noEmit": false,
+    "noEmit": true,
     "jsx": "react-jsx",
 
     /* Linting */
