feat: Fix raw data translations and implement centralized translation system
 Features:
- Centralized translation utilities in src/utils/translationUtils.ts
- Complete load_type translation support including machinery_parts and textile_products
- Vehicle type translations for all transport modes
- Document type translations for all required documents
- Unified translation system across all components

 Bug Fixes:
- Fixed load_type displaying raw English values instead of Turkish
- Resolved database field name mismatch with translation keys
- Added missing translations for machinery_parts and textile_products
- Fixed inconsistent translation implementations across modals

 Improvements:
- Enhanced ListingCard component with centralized translations
- Updated all detail modals (Load, Shipment Request, Transport Service)
- Improved debug logging for translation troubleshooting
- Consistent translation approach across HomePage and ListingsPage
- Better error handling for missing translation keys

 Components Updated:
- ListingCard.tsx: Centralized translation imports
- LoadListingDetailModal.tsx: Full translation integration
- ShipmentRequestDetailModal.tsx: Complete translation support
- TransportServiceDetailModal.tsx: Vehicle and document translations
- HomePage.tsx: Load type translations for listing displays
- ListingsPage.tsx: Consistent translation implementation
- MyLoadListings.tsx: Debug logging for database values
- CreateShipmentRequestSection.tsx: Load type translations
- CreateTransportServiceSection.tsx: Vehicle type translations

 Translation Coverage:
- Load types: machinery_parts, textile_products, general_cargo, etc.
- Vehicle types: All road, sea, air, rail transport vehicles
- Documents: Analysis reports, certificates, customs docs
- Transport modes: Road, sea, air, rail, multimodal

This commit resolves the raw data display issue and provides a scalable
translation system for the entire application.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,10 +6,13 @@
     "forceConsistentCasingInFileNames": true,
     "target": "ES2022",
     "useDefineForClassFields": true,
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "lib": [
+      "ES2022",
+      "DOM",
+      "DOM.Iterable"
+    ],
     "module": "ESNext",
     "skipLibCheck": true,
-
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
@@ -17,7 +20,6 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -26,5 +28,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
