--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@solana/wallet-standard-features": "^1.3.0",
     "@supabase/supabase-js": "^2.50.3",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.0",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.13.2",
