--- a/package.json
+++ b/package.json
@@ -43,6 +43,6 @@
     "postcss": "^8.5.1",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.0",
-    "vite": "^7.0.0-beta.1"
+    "vite": "^7.0.6"
   }
 }
