--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,25 @@
 # Supabase Configuration
-REACT_APP_SUPABASE_URL=your-project-url.supabase.co
-REACT_APP_SUPABASE_ANON_KEY=your-anon-key
+VITE_SUPABASE_URL=your-project-url.supabase.co
+VITE_SUPABASE_ANON_KEY=your-anon-key
 
 # Example:
-# REACT_APP_SUPABASE_URL=https://xyzabcdef.supabase.co
-# REACT_APP_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+# VITE_SUPABASE_URL=https://xyzabcdef.supabase.co
+# VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
+
+# API Keys for Live Data Integration
+# Finansal veriler için
+VITE_ALPHA_VANTAGE_API_KEY=demo
+VITE_FIXER_API_KEY=demo
+
+# Haber verileri için
+VITE_NEWS_API_KEY=demo
+VITE_BING_NEWS_API_KEY=demo
+
+# Kullanım:
+# 1. Bu anahtarları gerçek API anahtarlarıyla değiştirin
+# 2. Alpha Vantage: https://www.alphavantage.co/ (ücretsiz)
+# 3. Fixer.io: https://fixer.io/ (ücretsiz katman)
+# 4. NewsAPI: https://newsapi.org/ (ücretsiz katman)
+# 5. Bing News API: https://azure.microsoft.com/en-us/services/cognitive-services/bing-news-search-api/
+
+# NOT: Bu dosyayı .gitignore'a ekleyin!
