feat: Add live API integration infrastructure
- Created clean marketDataService with Trading Economics API support
- Added live/static data mode switching with USE_LIVE_API flag
- Implemented comprehensive API infrastructure for real-time data
- Fixed syntax errors and rebuilt service from scratch
- Added proper TypeScript interfaces for extended market data
- Prepared for Trading Economics, Alpha Vantage, and CoinGecko APIs
- Freight rates remain static navlun categories as requested
- Widget shows live commodity data, cards show freight categories

--- a/.env
+++ b/.env
@@ -18,6 +18,12 @@ VITE_FMP_API_KEY=demo
 # Alpha Vantage API (Free tier - 500 calls/day) - Requires signup at alphavantage.co
 VITE_ALPHA_VANTAGE_API_KEY=demo
 
+# Trading Economics API (Free tier) - Requires signup at tradingeconomics.com
+VITE_TRADING_ECONOMICS_API_KEY=demo
+
+# CoinGecko API (Free tier - 50 calls/minute) - No API key required
+VITE_COINGECKO_API_KEY=demo
+
 # Trading Economics API (Free trial available) - For Baltic Dry Index
 VITE_TRADING_ECONOMICS_API_KEY=demo
 
