feat: AboutUsPage geliştirme aşaması güncellemeleri
- Statik istatistikler kaldırıldı (50,000+ kullanıcı, vb.)
- Geliştirme aşamasında bölümü eklendi
- Kargo firması ortaklıklarını kaldırıldı (Aras, MNG, UPS, DHL, vb.)
- Auth modal entegrasyonu tamamlandı
- Dürüst platform içerikleri güncellendi
- JSX syntax hataları düzeltildi

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,43 @@
 # Supabase Configuration
-VITE_SUPABASE_URL=your-project-url.supabase.co
+VITE_SUPABASE_URL=https://rmqwrdeaecjyyalbnvbq.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key
+
+# Site URL (production URL'inizi buraya yazın)
+VITE_APP_URL=https://kargomarketing.com
+
+# Admin Configuration
+VITE_ADMIN_EMAIL=emrahbadas@gmail.com
+
+# Email Notification System
+VITE_EMAIL_FUNCTION_URL=https://rmqwrdeaecjyyalbnvbq.supabase.co/functions/v1/send-email-notification
+VITE_ENABLE_EMAIL_NOTIFICATIONS=true
+VITE_ENABLE_NEWSLETTER=true
 
 # Example:
 # VITE_SUPABASE_URL=https://xyzabcdef.supabase.co
 # VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
-# API Keys for Live Data Integration
-# Finansal veriler için
+# API Keys for Live Market Data (Canlı Piyasa Verileri)
+# Alpha Vantage - Petrol fiyatları için (ücretsiz - günlük 500 çağrı)
 VITE_ALPHA_VANTAGE_API_KEY=demo
+
+# ExchangeRate-API otomatik kullanılıyor (ücretsiz - aylık 1000 çağrı)
+# Ek döviz API'leri için:
 VITE_FIXER_API_KEY=demo
+
+# Market data cache süresi (dakika)
+VITE_MARKET_DATA_CACHE_DURATION=5
 
 # Haber verileri için
 VITE_NEWS_API_KEY=demo
 VITE_BING_NEWS_API_KEY=demo
 
-# Kullanım:
-# 1. Bu anahtarları gerçek API anahtarlarıyla değiştirin
-# 2. Alpha Vantage: https://www.alphavantage.co/ (ücretsiz)
-# 3. Fixer.io: https://fixer.io/ (ücretsiz katman)
-# 4. NewsAPI: https://newsapi.org/ (ücretsiz katman)
-# 5. Bing News API: https://azure.microsoft.com/en-us/services/cognitive-services/bing-news-search-api/
+# API Kullanım Rehberi:
+# 1. Alpha Vantage: https://www.alphavantage.co/ (petrol fiyatları)
+# 2. ExchangeRate-API: Otomatik (döviz kurları - ücretsiz)
+# 3. CoinGecko: Otomatik (altın fiyatları - ücretsiz)
+# 4. Baltic Dry Index: Cache sistemi ile simülasyon
+# 5. Fixer.io: https://fixer.io/ (alternatif döviz API)
+# 6. NewsAPI: https://newsapi.org/ (haberler)
 
 # NOT: Bu dosyayı .gitignore'a ekleyin!
